--- a/Web_Vendas/Views/Produtos/Edit.cshtml
+++ b/Web_Vendas/Views/Produtos/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Web_Vendas.Models.Produto
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
 <h1>Edit</h1>
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para lista</a>
 </div>
 
 @section Scripts {
