--- a/Web_Vendas/Views/Produtos/Delete.cshtml
+++ b/Web_Vendas/Views/Produtos/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Web_Vendas.Models.Produto
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
 <h1>Delete</h1>
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Voltar para lista</a>
     </form>
 </div>
