--- a/Web_Vendas/Views/Vendedores/Details.cshtml
+++ b/Web_Vendas/Views/Vendedores/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Web_Vendas.Models.Vendedor
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
 <h1>Details</h1>
@@ -38,5 +38,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para lista</a>
 </div>
